--- a/contracts/package.json
+++ b/contracts/package.json
@@ -12,7 +12,10 @@
     "devDependencies": {
         "@nomicfoundation/hardhat-toolbox": "^5.0.0",
         "@openzeppelin/contracts": "^5.0.0",
+        "@types/node": "^25.0.3",
+        "dotenv": "^16.4.0",
         "hardhat": "^2.22.0",
-        "dotenv": "^16.4.0"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.9.3"
     }
 }
