feat: add project dependencies and build outputs

--- a/package.json
+++ b/package.json
@@ -1,41 +1,27 @@
 {
-  "name": "asset-forge",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-progress": "^1.1.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@radix-ui/react-toast": "^1.2.15",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.90.16",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.26",
-    "lucide-react": "^0.562.0",
-    "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0",
-    "viem": "^2.43.4",
-    "wagmi": "^3.1.4"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "name": "asset-forge",
+    "version": "1.0.0",
+    "description": "RWA Creator Studio - No-code platform for tokenizing real-world assets on Mantle",
+    "private": true,
+    "workspaces": [
+        "frontend",
+        "contracts"
+    ],
+    "scripts": {
+        "dev": "npm run dev --workspace=frontend",
+        "build": "npm run build --workspace=frontend",
+        "test": "npm run test --workspace=contracts",
+        "compile": "npm run compile --workspace=contracts",
+        "deploy:sepolia": "npm run deploy:sepolia --workspace=contracts",
+        "install:all": "npm install && cd contracts && npm install && cd ../frontend && npm install"
+    },
+    "keywords": [
+        "rwa",
+        "tokenization",
+        "mantle",
+        "blockchain",
+        "real-world-assets"
+    ],
+    "author": "",
+    "license": "MIT"
 }
