--- a/contracts/package.json
+++ b/contracts/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@nomicfoundation/hardhat-toolbox": "^5.0.0",
         "@openzeppelin/contracts": "^5.0.0",
+        "@openzeppelin/contracts-upgradeable": "^5.0.0",
         "@types/node": "^25.0.3",
         "dotenv": "^16.4.0",
         "hardhat": "^2.22.0",
